bizarre alignment issue

--- a/sass/partials/_document.scss
+++ b/sass/partials/_document.scss
@@ -115,7 +115,8 @@ section {
         }
         ul:not(.icons) {
           li {
-            margin-left: 30px;
+            margin-left: 3px;
+            margin-bottom: 6px;
             line-height: 110%;
           }
         }
